# GLWidgetDemo

./: .gitignore  QtWidgetsApplication1.sln
Algorithm/: find_cross_center.cpp  find_cross_center.h  find_hist_peaks.h
DeviceController/: CMakeLists.txt  CMakePresets.json  README.MD  vcpkg.json
DeviceController/acs/: ACSObject.cpp  ACSObject.h  ACSWorker.cpp  ACSWorker.h  AcsController.cpp  AcsController.h  CMakeLists.txt
DeviceController/client_test/: CMakeLists.txt  client_wnd.cpp  client_wnd.h  main.cpp  service_node.cpp  service_node.h
DeviceController/config/: device.ini  log.ini  melsecplc.ini
DeviceController/log/: CMakeLists.txt  log.cpp  log.h  log_cfg_mgr.cpp  log_cfg_mgr.h
DeviceController/plc/: CMakeLists.txt  melexception.h  melsecplc.cpp  melsecplc.h  plccfgmgr.cpp  plccfgmgr.h  plcobject.cpp  plcobject.h  plcworker.cpp  plcworker.h
DeviceController/plc/melsecCom/: ActProgDataLogging64_i.h  ActProgType64_i.h  ActSupportMsg64_i.h  ActUtlDataLogging64_i.h  ActUtlType64_i.h
DeviceController/rep/: acs_service.rep  plc_service.rep  ymc_service.rep
DeviceController/widget/: CMakeLists.txt  dev_widget.cpp  dev_widget.h  init_cfg_mgr.cpp  init_cfg_mgr.h  main.cpp  version.rc
DeviceController/widget/service/: acs_service.cpp  acs_service.h  plc_service.cpp  plc_service.h  service_obj.h  service_worker.cpp  service_worker.h  ymc_service.cpp  ymc_service.h
DeviceController/widget/sub_proc/: sub_proc_ctrl.cpp  sub_proc_ctrl.h
DeviceController/ymc/: CMakeLists.txt  YmcCommon.h  YmcController.cpp  YmcController.h  YmcObject.cpp  YmcObject.h  YmcWorker.cpp  YmcWorker.h
GLGraphicsView/: ArgsExpanding.hpp  CMakeLists.txt  GLGraphicsView.cpp  GLGraphicsView.h  GLWidget.cpp  GLWidget.h  ImageGraphicsItem.cpp  ImageGraphicsItem.h  OpenGLPixmapItem.cpp  OpenGLPixmapItem.h  OpenGLWidgetItem.cpp  OpenGLWidgetItem.h  main.cpp  res.qrc
GLWidget/: CMakeLists.txt  CMakePresets.json  GLWidget.cpp  GLWidget.h  gl.frag  gl.vert  main.cpp  res.qrc
LaserController/: CMakeLists.txt  CMakePresets.json  README.MD
LaserController/config/: laser.ini
LaserController/laser/: CMakeLists.txt  laser.h  laser_ctrl.cpp  laser_ctrl.h
LaserController/laser/jcz2/: CMakeLists.txt  MarkEzdDll.h  bmp_ent.h  jcz2_laser.cpp  jcz2_laser.h
LaserController/service/: CMakeLists.txt  laser_service.cpp  laser_service.h  laser_service.rep  service_ctrl.cpp  service_ctrl.h
LaserController/widget/: CMakeLists.txt  laser_cfg_mgr.cpp  laser_cfg_mgr.h  main.cpp
QtWidgetsApplication1/: GLWidget.cpp  QtWidgetsApplication1.vcxproj  QtWidgetsApplication1.vcxproj.filters  gl.frag  gl.vert  main.cpp  qtwidgetsapplication1.cpp  qtwidgetsapplication1.h  qtwidgetsapplication1.ui
RotateLineItem/: anymoveline.cpp  anymoveline.h
SubProcessMsg/: ReadMe.txt  SubProcessMain.cpp  sub_proc_ctrl.cpp  sub_proc_ctrl.h
ToolBox/: toolbox.cpp  toolbox.h  toolpage.qss
qml_test/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
qml_test/qml/: CMakeLists.txt  img_scale_move.qml  main_ui.qml  qml.qrc  qml_main.cpp
qt_zoom_image/: CMakePresets.json  CmakeLists.txt  main.cpp
qt_zoom_image/ui/: mywnd.cpp  mywnd.h  mywnd.ui
